fixing map help could get in the wrong position

--- a/src/scripts/pages/map/_map.scss
+++ b/src/scripts/pages/map/_map.scss
@@ -61,9 +61,13 @@
   }
 }
 
+.map-container {
+  position: relative;
+}
+
 .help-box {
   position: absolute;
-  top: 170px;
+  top: 20px;
   font-size: 12px;
 }
 
